load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

test_suite(
    name = "all_tests",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "test_dll_lib",
    hdrs = select({
        "//:platform_windows": [
            "test.h",
        ],
        "//conditions:default": [],
    }),
    data = [
        "//:test_headers",
    ],
)

cc_library(
    name = "test_lib",
    hdrs = select({
        "//:platform_windows": [
            "test.h",
        ],
        "//conditions:default": [],
    }),
    data = [
        "//:test_headers",
    ],
    deps = [
        "//:pthread",
    ],
)

cc_test(
    name = "barrier1_test",
    srcs = select({
        "//:platform_windows": [
            "barrier1.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "barrier2_test",
    srcs = select({
        "//:platform_windows": [
            "barrier2.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "barrier3_test",
    srcs = select({
        "//:platform_windows": [
            "barrier3.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "barrier4_test",
    srcs = select({
        "//:platform_windows": [
            "barrier4.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "barrier5_test",
    srcs = select({
        "//:platform_windows": [
            "barrier5.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "barrier6_test",
    srcs = select({
        "//:platform_windows": [
            "barrier6.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_library(
    name = "benchlib",
    srcs = select({
        "//:platform_windows": [
            "benchlib.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    hdrs = ["benchtest.h"],
    deps = [":test_lib"],
)

cc_test(
    name = "benchtest1_test",
    srcs = select({
        "//:platform_windows": [
            "benchtest1.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [
        ":benchlib",
        ":test_lib",
    ],
)

cc_test(
    name = "benchtest2_test",
    srcs = select({
        "//:platform_windows": [
            "benchtest2.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [
        ":benchlib",
        ":test_lib",
    ],
)

cc_test(
    name = "benchtest3_test",
    srcs = select({
        "//:platform_windows": [
            "benchtest3.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [
        ":benchlib",
        ":test_lib",
    ],
)

cc_test(
    name = "benchtest4_test",
    srcs = select({
        "//:platform_windows": [
            "benchtest4.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [
        ":benchlib",
        ":test_lib",
    ],
)

cc_test(
    name = "benchtest5_test",
    srcs = select({
        "//:platform_windows": [
            "benchtest5.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [
        ":benchlib",
        ":test_lib",
    ],
)

cc_test(
    name = "cancel1_test",
    srcs = select({
        "//:platform_windows": [
            "cancel1.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "cancel2_test",
    srcs = select({
        "//:platform_windows": [
            "cancel2.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "cancel3_test",
    srcs = select({
        "//:platform_windows": [
            "cancel3.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "cancel4_test",
    srcs = select({
        "//:platform_windows": [
            "cancel4.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "cancel5_test",
    srcs = select({
        "//:platform_windows": [
            "cancel5.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "cancel6a_test",
    srcs = select({
        "//:platform_windows": [
            "cancel6a.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "cancel6d_test",
    srcs = select({
        "//:platform_windows": [
            "cancel6d.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "cancel7_test",
    srcs = select({
        "//:platform_windows": [
            "cancel7.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "cancel8_test",
    srcs = select({
        "//:platform_windows": [
            "cancel8.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "cancel9_test",
    srcs = select({
        "//:platform_windows": [
            "cancel9.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    linkopts = select({
        "//:platform_windows": [
            "-DEFAULTLIB:Ws2_32.lib",
        ],
        "//conditions:default": [
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "cleanup0_test",
    srcs = select({
        "//:platform_windows": [
            "cleanup0.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "cleanup1_test",
    srcs = select({
        "//:platform_windows": [
            "cleanup1.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "cleanup2_test",
    srcs = select({
        "//:platform_windows": [
            "cleanup2.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "cleanup3_test",
    srcs = select({
        "//:platform_windows": [
            "cleanup3.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "condvar1_test",
    srcs = select({
        "//:platform_windows": [
            "condvar1.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "condvar1_1_test",
    srcs = select({
        "//:platform_windows": [
            "condvar1_1.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "condvar1_2_test",
    srcs = select({
        "//:platform_windows": [
            "condvar1_2.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "condvar2_test",
    srcs = select({
        "//:platform_windows": [
            "condvar2.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "condvar2_1_test",
    srcs = select({
        "//:platform_windows": [
            "condvar2_1.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "condvar3_test",
    srcs = select({
        "//:platform_windows": [
            "condvar3.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "condvar3_1_test",
    srcs = select({
        "//:platform_windows": [
            "condvar3_1.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "condvar3_2_test",
    srcs = select({
        "//:platform_windows": [
            "condvar3_2.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "condvar3_3_test",
    srcs = select({
        "//:platform_windows": [
            "condvar3_3.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "condvar4_test",
    srcs = select({
        "//:platform_windows": [
            "condvar4.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "condvar5_test",
    srcs = select({
        "//:platform_windows": [
            "condvar5.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "condvar6_test",
    srcs = select({
        "//:platform_windows": [
            "condvar6.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "condvar7_test",
    srcs = select({
        "//:platform_windows": [
            "condvar7.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "condvar8_test",
    srcs = select({
        "//:platform_windows": [
            "condvar8.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "condvar9_test",
    srcs = select({
        "//:platform_windows": [
            "condvar9.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "context1_test",
    srcs = select({
        "//:platform_windows": [
            "context1.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "count1_test",
    srcs = select({
        "//:platform_windows": [
            "count1.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "create1_test",
    srcs = select({
        "//:platform_windows": [
            "create1.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "create2_test",
    srcs = select({
        "//:platform_windows": [
            "create2.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "create3_test",
    srcs = select({
        "//:platform_windows": [
            "create3.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "delay1_test",
    srcs = select({
        "//:platform_windows": [
            "delay1.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "delay2_test",
    srcs = select({
        "//:platform_windows": [
            "delay2.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "detach1_test",
    srcs = select({
        "//:platform_windows": [
            "detach1.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "equal1_test",
    srcs = select({
        "//:platform_windows": [
            "equal1.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "errno1_test",
    srcs = select({
        "//:platform_windows": [
            "errno1.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "exception1_test",
    srcs = select({
        "//:platform_windows": [
            "exception1.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "exception2_test",
    srcs = select({
        "//:platform_windows": [
            "exception2.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "exception3_test",
    srcs = select({
        "//:platform_windows": [
            "exception3.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "exit1_test",
    srcs = select({
        "//:platform_windows": [
            "exit1.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "exit2_test",
    srcs = select({
        "//:platform_windows": [
            "exit2.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "exit3_test",
    srcs = select({
        "//:platform_windows": [
            "exit3.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "exit4_test",
    srcs = select({
        "//:platform_windows": [
            "exit4.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "exit5_test",
    srcs = select({
        "//:platform_windows": [
            "exit5.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "eyal1_test",
    srcs = select({
        "//:platform_windows": [
            "eyal1.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "inherit1_test",
    srcs = select({
        "//:platform_windows": [
            "inherit1.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "join0_test",
    srcs = select({
        "//:platform_windows": [
            "join0.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "join1_test",
    srcs = select({
        "//:platform_windows": [
            "join1.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "join2_test",
    srcs = select({
        "//:platform_windows": [
            "join2.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "join3_test",
    srcs = select({
        "//:platform_windows": [
            "join3.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "kill1_test",
    srcs = select({
        "//:platform_windows": [
            "kill1.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

# Needs dll?
# cc_test(
#     name = "loadfree_test",
#     srcs = select({
#         "//:platform_windows": [
#             "loadfree.c",
#         ],
#         "//conditions:default": [
#             "stub.c",
#         ],
#     }),
#     deps = [
#         ":test_dll_lib",
#         "//:headers",
#         "//dll:pthread_dll_import",
#     ],
# )

cc_test(
    name = "mutex1_test",
    srcs = select({
        "//:platform_windows": [
            "mutex1.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "mutex1e_test",
    srcs = select({
        "//:platform_windows": [
            "mutex1e.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "mutex1n_test",
    srcs = select({
        "//:platform_windows": [
            "mutex1n.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "mutex1r_test",
    srcs = select({
        "//:platform_windows": [
            "mutex1r.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "mutex2_test",
    srcs = select({
        "//:platform_windows": [
            "mutex2.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "mutex2e_test",
    srcs = select({
        "//:platform_windows": [
            "mutex2e.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "mutex2r_test",
    srcs = select({
        "//:platform_windows": [
            "mutex2r.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "mutex3_test",
    srcs = select({
        "//:platform_windows": [
            "mutex3.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "mutex3e_test",
    srcs = select({
        "//:platform_windows": [
            "mutex3e.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "mutex3r_test",
    srcs = select({
        "//:platform_windows": [
            "mutex3r.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "mutex4_test",
    srcs = select({
        "//:platform_windows": [
            "mutex4.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "mutex5_test",
    srcs = select({
        "//:platform_windows": [
            "mutex5.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "mutex6_test",
    srcs = select({
        "//:platform_windows": [
            "mutex6.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "mutex6e_test",
    srcs = select({
        "//:platform_windows": [
            "mutex6e.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "mutex6es_test",
    srcs = select({
        "//:platform_windows": [
            "mutex6es.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "mutex6n_test",
    srcs = select({
        "//:platform_windows": [
            "mutex6n.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "mutex6r_test",
    srcs = select({
        "//:platform_windows": [
            "mutex6r.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "mutex6rs_test",
    srcs = select({
        "//:platform_windows": [
            "mutex6rs.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "mutex6s_test",
    srcs = select({
        "//:platform_windows": [
            "mutex6s.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "mutex7_test",
    srcs = select({
        "//:platform_windows": [
            "mutex7.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "mutex7e_test",
    srcs = select({
        "//:platform_windows": [
            "mutex7e.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "mutex7n_test",
    srcs = select({
        "//:platform_windows": [
            "mutex7n.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "mutex7r_test",
    srcs = select({
        "//:platform_windows": [
            "mutex7r.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "mutex8_test",
    srcs = select({
        "//:platform_windows": [
            "mutex8.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "mutex8e_test",
    srcs = select({
        "//:platform_windows": [
            "mutex8e.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "mutex8n_test",
    srcs = select({
        "//:platform_windows": [
            "mutex8n.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "mutex8r_test",
    srcs = select({
        "//:platform_windows": [
            "mutex8r.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "once1_test",
    srcs = select({
        "//:platform_windows": [
            "once1.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "once2_test",
    srcs = select({
        "//:platform_windows": [
            "once2.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "once3_test",
    srcs = select({
        "//:platform_windows": [
            "once3.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "once4_test",
    srcs = select({
        "//:platform_windows": [
            "once4.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

# Needs openmp.
cc_test(
    name = "openmp1_test",
    srcs = select({
        "//:platform_windows": [
            "openmp1.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    copts = select({
        "//:platform_windows": [
            "-openmp",
        ],
        "//conditions:default": [],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "priority1_test",
    srcs = select({
        "//:platform_windows": [
            "priority1.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "priority2_test",
    srcs = select({
        "//:platform_windows": [
            "priority2.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "reuse1_test",
    srcs = select({
        "//:platform_windows": [
            "reuse1.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "reuse2_test",
    srcs = select({
        "//:platform_windows": [
            "reuse2.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "robust1_test",
    srcs = select({
        "//:platform_windows": [
            "robust1.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "robust2_test",
    srcs = select({
        "//:platform_windows": [
            "robust2.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "robust3_test",
    srcs = select({
        "//:platform_windows": [
            "robust3.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "robust4_test",
    srcs = select({
        "//:platform_windows": [
            "robust4.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "robust5_test",
    srcs = select({
        "//:platform_windows": [
            "robust5.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "rwlock1_test",
    srcs = select({
        "//:platform_windows": [
            "rwlock1.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "rwlock2_test",
    srcs = select({
        "//:platform_windows": [
            "rwlock2.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "rwlock2_t_test",
    srcs = select({
        "//:platform_windows": [
            "rwlock2_t.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "rwlock3_test",
    srcs = select({
        "//:platform_windows": [
            "rwlock3.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "rwlock3_t_test",
    srcs = select({
        "//:platform_windows": [
            "rwlock3_t.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "rwlock4_test",
    srcs = select({
        "//:platform_windows": [
            "rwlock4.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "rwlock4_t_test",
    srcs = select({
        "//:platform_windows": [
            "rwlock4_t.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "rwlock5_test",
    srcs = select({
        "//:platform_windows": [
            "rwlock5.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "rwlock5_t_test",
    srcs = select({
        "//:platform_windows": [
            "rwlock5_t.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "rwlock6_test",
    srcs = select({
        "//:platform_windows": [
            "rwlock6.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "rwlock6_t_test",
    srcs = select({
        "//:platform_windows": [
            "rwlock6_t.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "rwlock6_t2_test",
    srcs = select({
        "//:platform_windows": [
            "rwlock6_t2.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "rwlock7_test",
    srcs = select({
        "//:platform_windows": [
            "rwlock7.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "rwlock8_test",
    srcs = select({
        "//:platform_windows": [
            "rwlock8.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "self1_test",
    srcs = select({
        "//:platform_windows": [
            "self1.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "self2_test",
    srcs = select({
        "//:platform_windows": [
            "self2.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "semaphore1_test",
    srcs = select({
        "//:platform_windows": [
            "semaphore1.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "semaphore2_test",
    srcs = select({
        "//:platform_windows": [
            "semaphore2.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "semaphore3_test",
    srcs = select({
        "//:platform_windows": [
            "semaphore3.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "semaphore4_test",
    srcs = select({
        "//:platform_windows": [
            "semaphore4.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "semaphore4t_test",
    srcs = select({
        "//:platform_windows": [
            "semaphore4t.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "semaphore5_test",
    srcs = select({
        "//:platform_windows": [
            "semaphore5.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "sequence1_test",
    srcs = select({
        "//:platform_windows": [
            "sequence1.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "sizes_test",
    srcs = select({
        "//:platform_windows": [
            "sizes.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "spin1_test",
    srcs = select({
        "//:platform_windows": [
            "spin1.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "spin2_test",
    srcs = select({
        "//:platform_windows": [
            "spin2.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "spin3_test",
    srcs = select({
        "//:platform_windows": [
            "spin3.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "spin4_test",
    srcs = select({
        "//:platform_windows": [
            "spin4.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "stress1_test",
    srcs = select({
        "//:platform_windows": [
            "stress1.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_binary(
    name = "tryentercs",
    srcs = select({
        "//:platform_windows": [
            "tryentercs.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
)

cc_binary(
    name = "tryentercs2",
    srcs = select({
        "//:platform_windows": [
            "tryentercs2.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
)

cc_test(
    name = "tsd1_test",
    srcs = select({
        "//:platform_windows": [
            "tsd1.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "tsd2_test",
    srcs = select({
        "//:platform_windows": [
            "tsd2.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "valid1_test",
    srcs = select({
        "//:platform_windows": [
            "valid1.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)

cc_test(
    name = "valid2_test",
    srcs = select({
        "//:platform_windows": [
            "valid2.c",
        ],
        "//conditions:default": [
            "stub.c",
        ],
    }),
    deps = [":test_lib"],
)
